# snickerdoodle

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cc_config.yaml  cookiecutter.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  coverage.yml  dependabot.yml  document.yml  merge.yml  publish.yml  release.yml  update.yml
advanced/: index.html
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
credits/: index.html
css/: mkdocstrings.css
docs/: advanced.md  credits.md  guide.md  tutorial.md
docs/scripts/: gen_credits.py  gen_ref_nav.py
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
license/: index.html
reference/SUMMARY/: index.html
scripts/: gen_credits.py
search/: search_index.json
tests/: conftest.py  test_generation.py  test_main.py
tutorial/: index.html
{{ cookiecutter.repo_name }}/: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.github/: dependabot.yml
{{ cookiecutter.repo_name }}/.github/ISSUE_TEMPLATE/: bug_report.md
{{ cookiecutter.repo_name }}/.github/workflows/: build.yml  ci.yml  coverage.yml  document.yml  lint.yml  merge.yml  publish.yml  release.yml  validate_codecov.yml
{{ cookiecutter.repo_name }}/docs/scripts/: gen_credits.py
{{ cookiecutter.repo_name }}/tests/: test_main.py
{{cookiecutter.repo_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: build.yml  ci.yml  document.yml  lint.yml  merge.yml  publish.yml  release.yml  update.yml
{{cookiecutter.repo_name}}/docs/: credits.md  index.md
{{cookiecutter.repo_name}}/docs/scripts/: gen_credits.py  gen_ref_nav.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: __init__.py  test_main.py
