# Project packaging rules and instructions

[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}]
license = {text = "{{cookiecutter.license}}"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development"]
keywords = []
dependencies = []

[project.urls]
Documentation = "https://{{cookiecutter.github_user}}.github.io/{{cookiecutter.repo_name}}"
Repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.repo_name}}"
Issues = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.repo_name}}/issues"
Discussions = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.repo_name}}/discussions"
Changelog = "https://{{cookiecutter.github_user}}.github.io/{{cookiecutter.repo_name}}/changelog"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
plugins = ["sync-pre-commit-lock[pdm]", "pdm-multirun"]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
docs = [
    "markdown-callouts >= 0.3",
    "markdown-exec >= 1.6.0",
    "mkdocs >= 1.5.2",
    "mkdocs-coverage >= 1.0.0",
    "mkdocs-gen-files >= 0.5.0",
    "mkdocs-git-committers-plugin-2 >= 1.1.2",
    "mkdocs-literate-nav >= 0.6.0",
    "mkdocs-material >= 9.1.2",
    "mkdocs-minify-plugin >= 0.7.1",
    "mkdocstrings[python] >= 0.22.0",
    "toml >= 0.10.2"]
quality = ["pre-commit >= 3.3.3", "ruff >= 0.0.284"]
tests = [
    "coverage >= 7.2.7",
    "pytest >= 7.4.0",
    "pytest-cov >= 4.1.0",
    "pytest-randomly >= 3.13.0",
    "pytest-xdist >= 3.3.1"]

[tool.pdm.version]
source = "file"
path = "src/{{cookiecutter.repo_name}}/__init__.py"

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]

[tool.ruff]
extend-exclude = ["docs", "scripts", "site", "tests", ".*.*"]
fix = true
fixable = ["ALL"]
ignore = [
    "A001",  # Variable is shadowing a Python builtin
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "ARG003",  # Unused class method argument: `parameters`
    "ARG005",  # Unused lambda argument
    "C901",  # Too complex
    "D105",  # Missing docstring in magic method
    "D400",  # First line must end in a period
    "D415",  # First line must end in a period, question mark, or exclamation point
    "E501",  # Line too long
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "ERA001",  # Commented out code
    "EXE002",  # No shebang is present in an executable file
    "FBT001",  # Boolean positional arg in function definition
    "G004",  # Logging statement uses f-string
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0915",  # Too many statements
    "Q000",  # Single quotes found but double quotes preferred
    "SLF001", # Private member accessed
    "TID252",  # Relative imports are banned
    "TRY003",]  # Avoid specifying long messages outside the exception class
line-length = 80
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "COM",
    "D",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PYI",
    "Q",
    "RUF",
    "RSE",
    "RET",
    "S",
    "SIM",
    "SLF",
    "T",
    "T10",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
known-first-party = ["{{cookiecutter.repo_name}}"]
